--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "apollo-server-errors": "^3.3.1",
     "aws-sdk": "^2.1379.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
