--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ PORT = 3000
 MONGODB_URL = mongodb+srv://rajgupta07082000:0Um5TBcHGam3DxeZ@cluster0.p92r9bx.mongodb.net/user-graphql
 JWT_PRIVATE_KEY = "qwertyuiopasdfghjklzxcvbnm"
 TOKEN_EXPIRY_TIME = "5h"
+AWS_ACCESS_KEY_ID = "AKIAY3L35MCRZNIRGT6N"
+AWS_SECRET_KEY = "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"
 
