--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/server.js",
     "start": "node server.js"
   },
   "author": "",
@@ -16,10 +16,13 @@
     "aws-sdk": "^2.1379.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "graphql-constraint-directive": "^5.1.1", 
     "graphql-tag": "^2.12.6",
+    "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "yup": "^1.2.0"
   }
 }
