--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "aws-sdk": "^2.1379.0",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
-    "graphql-constraint-directive": "^5.1.1", 
+    "graphql-constraint-directive": "^5.1.1",
+    "graphql-middleware": "^6.1.34",
     "graphql-tag": "^2.12.6",
     "graphql-tools": "^9.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
+    "validator": "^13.9.0",
     "yup": "^1.2.0"
   }
 }
