--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/server": "^4.7.1",
     "apollo-server-errors": "^3.3.1",
     "aws-sdk": "^2.1379.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
     "graphql-constraint-directive": "^5.1.1",
